manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "bst-cdcb"
    labels:
        app: "bst-cdcb"
spec:
    type: ClusterIP
    ports:
    - port: 6543
      targetPort: 6543
      protocol: TCP
      name: http
    selector:
        app: "bst-cdcb"
