manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "bst-cdcb"
    labels:
        app: "bst-cdcb"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: bst4a71-bst-cdcb.bd772f9b06f942bd82c2.northeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "bst-cdcb"
                servicePort: 6543
